--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,5 +56,8 @@ services:
       - 3000:3000
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
+
     # env_file:
     #   - config.monitoring
