--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,15 @@
-version: '3'
-
-volumes:
-  prometheus_data: {}
-  grafana_data: {}
-
-networks:
-  default:
+version: '3.8'
 
 services:
-
   prometheus:
     image: prom/prometheus:latest
     depends_on:      
       - node_exporter
     restart: unless-stopped
     ports:
-      - 9090:9090
-    networks:
-      - default
+      - "9090:9090"
     volumes:
-      - ./prometheus/:/etc/prometheus/
+      - ./prometheus/:/etc/prometheus/:ro
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -27,14 +17,14 @@ services:
       - '--storage.tsdb.retention=5d'
       - '--web.console.libraries=/usr/share/prometheus/console_libraries'
       - '--web.console.templates=/usr/share/prometheus/consoles'
+    networks:
+      - raspi-monitoring-net
 
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
     restart: unless-stopped
     ports:
       - 9100
-    networks: 
-      - default
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -44,20 +34,26 @@ services:
       - '--path.sysfs=/host/sys'
       - --collector.filesystem.ignored-mount-points
       - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
-  
+    networks:
+      - raspi-monitoring-net
+
   grafana:
     image: grafana/grafana:master
     depends_on:
       - prometheus
     restart: unless-stopped
-    networks:
-      - default
     ports:
-      - 3000:3000
+      - "3000:3000"
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
       - ./grafana/dashboards:/var/lib/grafana/dashboards
+    networks:
+      - raspi-monitoring-net
 
-    # env_file:
-    #   - config.monitoring
+volumes:
+  prometheus_data: {}
+  grafana_data: {}
+
+networks:
+  raspi-monitoring-net:
